Patch to submit Composer as Artist for last.fm scrobbles when there is no artist but only composer field. Thanks to Nicholas Wilson for the patch!

BUG: 254580