src/services/lastfm/ScrobblerAdapter.cpp
@@ -77,8 +77,9 @@ ScrobblerAdapter::engineNewTrackPlaying()
         
         m_current.setTitle( track->name() );
         m_current.setDuration( track->length() / 1000 );
-        if( track->artist() )
-            m_current.setArtist( track->artist()->name() );
+        if( track->artist() || track->composer() )
+            m_current.setArtist(
+                track->composer() ? track->composer()->name() : track->artist()->name() );
         if( track->album() )
             m_current.setAlbum( track->album()->name() );
 
@@ -122,7 +123,7 @@ ScrobblerAdapter::engineNewMetaData( const QHash<qint64, QString> &newMetaData, 
     Meta::TrackPtr track = The::engineController()->currentTrack();
     if( track &&
         ( track->type() == "stream" && ( !track->name().isEmpty() 
-          && track->artist() ) ) ) // got a stream, and it has enough info to be a new track
+          && ( track->artist() || track->composer() ) ) ) ) // got a stream, and it has enough info to be a new track
     {
         // don't use checkScrobble as we don't need to check timestamps, it is a stream
         debug() << "scrobble: " << m_current.artist() << " - " << m_current.album() << " - " << m_current.title();
@@ -132,7 +133,7 @@ ScrobblerAdapter::engineNewMetaData( const QHash<qint64, QString> &newMetaData, 
         resetVariables();
                     
         m_current.setTitle( track->name() );
-        m_current.setArtist( track->artist()->name() );
+        m_current.setArtist( track->composer() ? track->composer()->name() : track->artist()->name() );
         m_current.stamp();
         
         m_current.setSource( lastfm::Track::NonPersonalisedBroadcast );
@@ -210,8 +211,8 @@ ScrobblerAdapter::loveTrack( Meta::TrackPtr track ) // slot
     {
         lastfm::MutableTrack trackInfo;
         trackInfo.setTitle( track->name() );
-        if( track->artist() )
-            trackInfo.setArtist( track->artist()->name() );
+        if( track->artist() || track->composer() )
+            trackInfo.setArtist( track->composer() ? track->composer()->name() : track->artist()->name() );
         if( track->album() )
             trackInfo.setAlbum( track->album()->name() );
 
